--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@nativescript-community/ui-collectionview": "^5.3.2",
+    "@nativescript-community/ui-popover": "^0.1.9",
+    "@nativescript-use/vue": "^0.0.22",
     "@nativescript/core": "~8.6.0",
     "@nativescript/stackblitz": "^0.0.8",
     "nativescript-vue": "3.0.0-beta.10"
