--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "main": "src/app.ts",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+     "postinstall": "patch-package"
+  },
   "dependencies": {
     "@nativescript-community/ui-collectionview": "^5.3.2",
     "@nativescript-community/ui-popover": "^0.1.9",
     "@nativescript-use/vue": "^0.0.22",
     "@nativescript/core": "~8.6.0",
     "@nativescript/stackblitz": "^0.0.8",
-    "nativescript-vue": "3.0.0-beta.10"
+    "nativescript-vue": "3.0.0-beta.10",
+    "patch-package": "^8.0.0"
   },
   "devDependencies": {
     "@nativescript/android": "8.6.2",
