--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@nativescript-community/ui-collectionview": "^5.3.2",
+    "@akylas/nativescript": "^8.5.10",
+    "@nativescript-community/ui-collectionview": "^5.3.3",
+    "@nativescript-community/ui-collectionview-swipemenu": "^5.3.3",
+    "@nativescript-community/ui-lottie": "^5.0.6",
+    "@nativescript-community/ui-material-bottomsheet": "^7.2.4",
+    "@nativescript-community/ui-material-tabs": "^7.2.4",
+    "@nativescript-community/ui-persistent-bottomsheet": "^0.0.29",
     "@nativescript-community/ui-popover": "^0.1.9",
-    "@nativescript-use/vue": "^0.0.22",
-    "@nativescript/core": "^8.6.0",
+    "@nativescript-use/vue": "^0.0.23",
     "@nativescript/stackblitz": "^0.0.8",
+    "dayjs": "^1.11.10",
     "nativescript-vue": "3.0.0-beta.10",
     "patch-package": "^8.0.0",
     "pinia": "^2.1.7"
   },
   "devDependencies": {
     "@nativescript/android": "8.6.2",
+    "@nativescript/core": "^8.6.1",
     "@nativescript/ios": "8.6.1",
     "@nativescript/preview-cli": "1.0.5",
     "@nativescript/tailwind": "^2.0.1",
