--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@nativescript/core": "^8.6.1",
     "@nativescript-community/ui-collectionview": "^5.3.3",
     "@nativescript-community/ui-collectionview-swipemenu": "^5.3.3",
     "@nativescript-community/ui-lottie": "^5.0.6",
@@ -15,12 +14,16 @@
     "@nativescript-community/ui-material-tabs": "^7.2.4",
     "@nativescript-community/ui-persistent-bottomsheet": "^0.0.29",
     "@nativescript-community/ui-popover": "^0.1.9",
-    "@nativescript-use/vue": "^0.0.26",
+    "@nativescript-use/vue": "^0.0.29",
+    "@nativescript/core": "^8.6.1",
     "@nativescript/stackblitz": "^0.0.8",
+    "@open-native/core": "^2.0.0-alpha.15",
     "dayjs": "^1.11.10",
     "nativescript-vue": "3.0.0-beta.10",
     "patch-package": "^8.0.0",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "react-native-theme-switch-animation": "^0.4.1",
+    "setimmediate": "^1.0.5"
   },
   "devDependencies": {
     "@nativescript/android": "8.6.2",
